# site-frontend

./: .gitignore  404.html  CNAME  Makefile  README.md  about.html  about.md  about.org  archive.html  archive.org  atom.xml  contact.html  contact.md  contact.org  flake.nix  index.html  index.org  links.html  links.md  links.org  my-site.cabal  pl-glossary.html  pl-glossary.org  robots.txt  rss.xml  site.hs  sitemap.xml  stack.yaml
_site/: about.html  archive.html  contact.html  index.html
content/: 404.html  about.org  contact.md  contact.org  index.html  index.org  links.org  pl-glossary.org
css/: cookie.css  default.css  style.css  tufte.css
js/: common.js  cookie.js
posts/: 2015-12-07-tu-quoque.markdown  2021-06-08-test.md  2021-09-04-website.md  2022-01-04-curly-hair.md  2023-05-12-website.html  2023-05-12-website.org  2023-05-17-serving-websites-over-org.html  2023-05-17-serving-websites-over-org.org  2023-08-10-desktop-noise.html  2023-08-10-desktop-noise.org  2024-01-07-nixos-idris2-pack.html  2024-01-07-nixos-idris2-pack.org  2024-03-16-life-stack.html  2024-03-16-life-stack.org  dishonored-2-prolog.html  dishonored-2-prolog.org  life-stack.html  life-stack.org  nix-idris2-pack.html  nixos-idris2-pack.html  serving-websites-over-org.html  serving-websites-over-org.org  website.html  website.org
posts-backup/: 2021-09-04-website.md
static/: js.html  js.org  site.js  style.css  style.html  style.org
templates/: archive.html  archive.org  default.html  default.org  homepage.html  post-list.html  post-list.org  post.html  sitemap.xml
(+20 files in other folders)
