name:               my-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.14.*
		  , containers == 0.6.*
		  , pandoc == 2.11.*
		  , pandoc-sidenote == 0.22.*
  ghc-options:      -threaded
  default-language: Haskell2010
