name:               my-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      1.18

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , containers
                  , filepath
                  , pandoc < 3.0
                  , pandoc-types < 1.23
                  , regex-compat
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010
